--- a/resources/views/contact.html
+++ b/resources/views/contact.html
@@ -78,7 +78,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Mobile Menu -->
+                        <!-- Mobile templats -->
                         <div class="col-12">
                             <div class="mobile_menu d-block d-lg-none"></div>
                         </div>
@@ -346,7 +346,7 @@
 		<script src="../js/vendor/jquery-1.12.4.min.js"></script>
         <script src="../js/popper.min.js"></script>
         <script src="../js/bootstrap.min.js"></script>
-	    <!-- Jquery Mobile Menu -->
+	    <!-- Jquery Mobile templats -->
         <script src="../js/jquery.slicknav.min.js"></script>
 
 		<!-- Jquery Slick , Owl-Carousel Plugins -->
