--- a/resources/css/slicknav.css
+++ b/resources/css/slicknav.css
@@ -1,5 +1,5 @@
 /*!
- * SlickNav Responsive Mobile Menu v1.0.10
+ * SlickNav Responsive Mobile templats v1.0.10
  * (c) 2016 Josh Cope
  * licensed under MIT
  */
@@ -102,9 +102,9 @@
     padding: 0;
     margin: 0 0 0 20px; }
   .slicknav_nav .slicknav_row {
-    
+
     /* padding: 5px 10px; */
-    margin: 2px 5px; 
+    margin: 2px 5px;
   }
     .slicknav_nav .slicknav_row:hover {
       -webkit-border-radius: 6px;
