--- a/resources/views/index.html
+++ b/resources/views/index.html
@@ -77,7 +77,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Mobile Menu -->
+                        <!-- Mobile templats -->
                         <div class="col-12">
                             <div class="mobile_menu d-block d-lg-none"></div>
                         </div>
@@ -91,7 +91,7 @@
 
         <!-- slider Area Start-->
         <div class="slider-area ">
-            <!-- Mobile Menu -->
+            <!-- Mobile templats -->
             <div class="slider-active">
                 <div class="single-slider slider-height d-flex align-items-center" data-background="assets/img/hero/h1_hero.jpg">
                     <div class="container">
@@ -702,7 +702,7 @@
 		<script src="../js/vendor/jquery-1.12.4.min.js"></script>
         <script src="../js/popper.min.js"></script>
         <script src="../js/bootstrap.min.js"></script>
-	    <!-- Jquery Mobile Menu -->
+	    <!-- Jquery Mobile templats -->
         <script src="../js/jquery.slicknav.min.js"></script>
 
 		<!-- Jquery Slick , Owl-Carousel Plugins -->
