--- a/resources/views/single-blog.html
+++ b/resources/views/single-blog.html
@@ -77,7 +77,7 @@
                               </div>
                           </div>
                       </div>
-                      <!-- Mobile Menu -->
+                      <!-- Mobile templats -->
                       <div class="col-12">
                           <div class="mobile_menu d-block d-lg-none"></div>
                       </div>
@@ -651,7 +651,7 @@
 		<script src="../js/vendor/jquery-1.12.4.min.js"></script>
       <script src="../js/popper.min.js"></script>
       <script src="../js/bootstrap.min.js"></script>
-      <!-- Jquery Mobile Menu -->
+      <!-- Jquery Mobile templats -->
       <script src="../js/jquery.slicknav.min.js"></script>
 
 		<!-- Jquery Slick , Owl-Carousel Plugins -->
