--- a/resources/sass/design.scss
+++ b/resources/sass/design.scss
@@ -56,4 +56,12 @@
     }
 }
 
+.btn-xs {
+    width: 20px !important;
+    height: 20px !important;
+    font-size: 12px !important;
+    padding: 5px !important;
+    background-color: #fb246a !important;
+}
+
 
