--- a/public/css/design.css
+++ b/public/css/design.css
@@ -52,3 +52,11 @@
   text-align: center;
 }
 
+.btn-xs {
+  width: 20px !important;
+  height: 20px !important;
+  font-size: 12px !important;
+  padding: 5px !important;
+  background-color: #fb246a !important;
+}
+
