update cities input search in homr page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6434,3 +6434,10 @@ section p {
   background-color: #fb246a !important;
 }
 
+#cities {
+  position: absolute;
+  width: 100%;
+  cursor: pointer;
+  margin-top: 5px;
+}
+
