--- a/public/css/design.css
+++ b/public/css/design.css
@@ -60,3 +60,10 @@
   background-color: #fb246a !important;
 }
 
+#cities {
+  position: absolute;
+  width: 100%;
+  cursor: pointer;
+  margin-top: 5px;
+}
+
